--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+
+###   cd namedlocalrep ### 
+
+# git init
+# git add :/
+# git commit -m "Your msg" -a
+# git remote add origin https://github.com/yourUsername/yourRepository.git
+# git push origin master
+
 # dependencies
 /node_modules
 
